--- a/places.css
+++ b/places.css
@@ -7,7 +7,7 @@
   
   body {
     background-color: #fbf8f8;
-    color: #f9f8f8;
+    color: #000000;
     line-height: 1.6;
     padding: 20px;
   }
@@ -22,7 +22,7 @@
   }
   
   h1 {
-    color: #0bf3f3;
+    color: #12b0b0;
   }
   
   h2{
